--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/abstract-art-seamless-pattern-tropical-600w-1786578422.jpg"
+            src="./images/abstract-art-seamless-pattern-tropical-600w-1786578422.jpg"
             alt=""
           />
         </div>
@@ -29,7 +29,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/abstract-art-seamless-pattern-tropical-600w-1786578422.jpg"
+            src="./images/abstract-art-seamless-pattern-tropical-600w-1786578422.jpg"
             alt=""
           />
         </div>
@@ -38,7 +38,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/abstract-black-background-old-vignette-600w-128923145.jpg"
+            src="./images/abstract-black-background-old-vignette-600w-128923145.jpg"
             alt=""
           />
         </div>
@@ -47,7 +47,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/abstract-black-background-old-vignette-600w-128923145.jpg"
+            src="./images/abstract-black-background-old-vignette-600w-128923145.jpg"
             alt=""
           />
         </div>
@@ -56,7 +56,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/background-consisting-circles-same-size-600w-252642265.jpg"
+            src="./images/background-consisting-circles-same-size-600w-252642265.jpg"
             alt=""
           />
         </div>
@@ -65,7 +65,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/background-consisting-circles-same-size-600w-252642265.jpg"
+            src="./images/background-consisting-circles-same-size-600w-252642265.jpg"
             alt=""
           />
         </div>
@@ -74,7 +74,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/ethnic-boho-seamless-pattern-tribal-600w-601049723.jpg"
+            src="./images/ethnic-boho-seamless-pattern-tribal-600w-601049723.jpg"
             alt=""
           />
         </div>
@@ -83,7 +83,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/ethnic-boho-seamless-pattern-tribal-600w-601049723.jpg"
+            src="./images/ethnic-boho-seamless-pattern-tribal-600w-601049723.jpg"
             alt=""
           />
         </div>
@@ -92,7 +92,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/geometry-repeat-pattern-texture-background-600w-1658062375.jpg"
+            src="./images/geometry-repeat-pattern-texture-background-600w-1658062375.jpg"
             alt=""
           />
         </div>
@@ -101,7 +101,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/geometry-repeat-pattern-texture-background-600w-1658062375.jpg"
+            src="./images/geometry-repeat-pattern-texture-background-600w-1658062375.jpg"
             alt=""
           />
         </div>
@@ -109,20 +109,20 @@
       <div class="game-block" data-technology="html5">
         <div class="face front"></div>
         <div class="face back">
-          <img src="/images/grunge-background-600w-155568713.jpg" alt="" />
+          <img src="./images/grunge-background-600w-155568713.jpg" alt="" />
         </div>
       </div>
       <div class="game-block" data-technology="html5">
         <div class="face front"></div>
         <div class="face back">
-          <img src="/images/grunge-background-600w-155568713.jpg" alt="" />
+          <img src="./images/grunge-background-600w-155568713.jpg" alt="" />
         </div>
       </div>
       <div class="game-block" data-technology="jest">
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/seamless-japanese-pattern-hollow-dots-600w-467613404.jpg"
+            src="./images/seamless-japanese-pattern-hollow-dots-600w-467613404.jpg"
             alt=""
           />
         </div>
@@ -131,7 +131,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/seamless-japanese-pattern-hollow-dots-600w-467613404.jpg"
+            src="./images/seamless-japanese-pattern-hollow-dots-600w-467613404.jpg"
             alt=""
           />
         </div>
@@ -140,7 +140,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/watercolor-orange-fruits-branch-leaves-600w-1721837161.jpg"
+            src="./images/watercolor-orange-fruits-branch-leaves-600w-1721837161.jpg"
             alt=""
           />
         </div>
@@ -149,7 +149,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/watercolor-orange-fruits-branch-leaves-600w-1721837161.jpg"
+            src="./images/watercolor-orange-fruits-branch-leaves-600w-1721837161.jpg"
             alt=""
           />
         </div>
@@ -158,7 +158,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/seamless-pattern-random-round-dots-600w-444985042.jpg"
+            src="./images/seamless-pattern-random-round-dots-600w-444985042.jpg"
             alt=""
           />
         </div>
@@ -167,7 +167,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/seamless-pattern-random-round-dots-600w-444985042.jpg"
+            src="./images/seamless-pattern-random-round-dots-600w-444985042.jpg"
             alt=""
           />
         </div>
@@ -176,7 +176,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/watercolor-square-yellow-orange-paint-600w-276980150.jpg"
+            src="./images/watercolor-square-yellow-orange-paint-600w-276980150.jpg"
             alt=""
           />
         </div>
@@ -185,7 +185,7 @@
         <div class="face front"></div>
         <div class="face back">
           <img
-            src="/images/watercolor-square-yellow-orange-paint-600w-276980150.jpg"
+            src="./images/watercolor-square-yellow-orange-paint-600w-276980150.jpg"
             alt=""
           />
         </div>
